--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -53,7 +53,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>VetAssist</title>
+  <title>VetConnect</title>
 </head>
 
 <body>
